Config: Add Google AdSense with user's client ID (ca-pub-6816791976768051)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <!-- Material Symbols -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet">
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6816791976768051" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
